--- a/Java/2019/OOP1/BigThinTall/src/btt/screens/TodoForm.form
+++ b/Java/2019/OOP1/BigThinTall/src/btt/screens/TodoForm.form
@@ -2,7 +2,7 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="title" type="java.lang.String" value="BTT - New To-Do"/>
+    <Property name="title" type="java.lang.String" value="BTT - To-Do Form"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[600, 300]"/>
     </Property>
