--- a/Java/2019/OOP2/Translatorum/web/css/main.css
+++ b/Java/2019/OOP2/Translatorum/web/css/main.css
@@ -48,3 +48,18 @@ html, body {
 .margin-bottom {
     margin-bottom: 60px;
 }
+
+.error-message {
+    color: #f44336;
+    font-size: 10px;
+}
+
+.error-center {
+    width: 400px;
+    height: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-bottom: 20px;
+}
