Translatorum: word CRUD completo

--- a/Java/2019/OOP2/Translatorum/web/css/main.css
+++ b/Java/2019/OOP2/Translatorum/web/css/main.css
@@ -39,6 +39,10 @@ html, body {
     margin: 0 !important;
 }
 
+.display-none {
+    display: none;
+}
+
 .margin-bottom {
     margin-bottom: 60px;
 }
