--- a/Java/2019/OOP2/Translatorum/web/css/main.css
+++ b/Java/2019/OOP2/Translatorum/web/css/main.css
@@ -57,6 +57,11 @@ html, body {
     justify-content: space-between;
 }
 
+.flex-space-around {
+    display: flex;
+    justify-content: space-around;
+}
+
 /* index.jsp */
 .index-page-content {
     height: 400px;
@@ -67,6 +72,10 @@ html, body {
 
 #selectLanguageModal .modal-content {
     height: 600px !important;
+}
+
+.border-selection {
+    border-bottom: 1px solid #ff9800 !important;
 }
 
 /* language.jsp */
